files/hardening-script/confs/etc-iptables-iptables.rules
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -m limit --limit 5/min -j LOG --log-prefix "iptables input deny: " --log-level 7
-A INPUT -p icmp -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p tcp -j REJECT --reject-with tcp-reset
-A INPUT -p udp -j REJECT --reject-with icmp-port-unreachable
-A INPUT -j REJECT --reject-with icmp-proto-unreachable
-A FORWARD -m limit --limit 5/min -j LOG --log-prefix "iptables forward deny: " --log-level 7
-A OUTPUT -m limit --limit 5/min -j LOG --log-prefix "iptables output accepted: " --log-level 7
COMMIT
